--- a/Board Generation.ipynb
+++ b/Board Generation.ipynb
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "id": "changing-heating",
+   "id": "endless-eugene",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 344,
    "id": "published-liquid",
    "metadata": {},
    "outputs": [],
@@ -711,17 +711,23 @@
     "\n",
     "    def generate_all_boards(self):\n",
     "        constraints = sorted(self.constraints, key=lambda c: (len(c.affects()), len(c.adds())))\n",
+    "        print(constraints)\n",
     "        boards = [Board([None] * self.board_length)]\n",
     "        next_boards = []\n",
     "        \n",
-    "        for constraint in constraints:\n",
-    "            for board in boards:\n",
+    "        for i, constraint in enumerate(constraints):\n",
+    "            print(\"Working on constraint \" + str(i+1) + \"/\" + str(len(constraints)))\n",
+    "            for j, board in enumerate(boards):\n",
+    "                print(\"Processing board \" + str(j+1) + \"/\" + str(len(boards)), end=\"\\r\")\n",
     "                new_num_objects = self._subtract_num_objects(board)\n",
     "                next_boards.extend(constraint.fill_board(board, new_num_objects))\n",
+    "            print()\n",
     "            boards = next_boards\n",
     "            next_boards = []\n",
     "        \n",
-    "        for board in boards:\n",
+    "        print(\"Finishing boards with remaining objects\")\n",
+    "        for i, board in enumerate(boards):\n",
+    "            print(\"Processing board \" + str(i+1) + \"/\" + str(len(boards)), end=\"\\r\")\n",
     "            new_num_objects = self._subtract_num_objects(board)\n",
     "            remaining_objects = self._list_objects(new_num_objects)\n",
     "            relevant_constraints = self._relevant_constraints(remaining_objects)\n",
@@ -736,12 +742,13 @@
     "                        j += 1\n",
     "                if board_copy.check_constraints(relevant_constraints):\n",
     "                    next_boards.append(board_copy)\n",
+    "        print()\n",
     "        return next_boards"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 345,
    "id": "parallel-insight",
    "metadata": {},
    "outputs": [],
@@ -764,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 310,
-   "id": "reduced-month",
+   "id": "cloudy-correlation",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "varied-craps",
+   "id": "accessory-bosnia",
    "metadata": {},
    "outputs": [
     {
@@ -811,10 +818,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 346,
    "id": "dutch-weekly",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<__main__.DwarfPlanetConstraint object at 0x7f8058a4ab10>, <__main__.AsteroidConstraint object at 0x7f8058a50190>, <__main__.CometConstraint object at 0x7f8058a501d0>, <__main__.GasCloudConstraint object at 0x7f8058a4ab90>, <__main__.PlanetXConstraint object at 0x7f8058a4a9d0>]\n",
+      "Working on constraint 1/5\n",
+      "Processing board 1/1\n",
+      "Working on constraint 2/5\n",
+      "Processing board 108/108\n",
+      "Working on constraint 3/5\n",
+      "Processing board 5454/5454\n",
+      "Working on constraint 4/5\n",
+      "Processing board 32916/32916\n",
+      "Working on constraint 5/5\n",
+      "Processing board 569394/569394\n",
+      "Finishing boards with remaining objects\n",
+      "Processing board 1418100/1418100\n"
+     ]
+    }
+   ],
    "source": [
     "boards18 = eighteen_type.generate_all_boards()"
    ]
@@ -822,10 +849,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "graduate-colleague",
+   "id": "empty-celebration",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abandoned-audio",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"valid_18_boards.p\", \"wb\") as f:\n",
+    "    pickle.dump(boards18, f)"
+   ]
   }
  ],
  "metadata": {
