Database and API

--- a/Database.ipynb
+++ b/Database.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "thousand-galaxy",
+   "execution_count": 1,
+   "id": "interested-canvas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "closed-observer",
+   "execution_count": 2,
+   "id": "exciting-reserve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "consecutive-observer",
+   "execution_count": 3,
+   "id": "severe-reliance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "electoral-arctic",
+   "execution_count": 4,
+   "id": "civilian-monday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "sweet-domestic",
+   "execution_count": 5,
+   "id": "aging-fusion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "successful-bearing",
+   "execution_count": 6,
+   "id": "employed-louis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,12 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "racial-measurement",
+   "execution_count": 7,
+   "id": "renewable-treasurer",
    "metadata": {},
    "outputs": [],
    "source": [
-    "   \n",
     "def add_games_by_str(games, game_codes):\n",
     "    values = []\n",
     "    \n",
@@ -136,13 +135,13 @@
     "    cxn.commit()\n",
     "    \n",
     "    cursor.close()\n",
-    "    cxn.close("
+    "    cxn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dated-charger",
+   "execution_count": 8,
+   "id": "removed-fitness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,13 +149,18 @@
     "    cxn = get_connection()\n",
     "    cursor = cxn.cursor()\n",
     "    \n",
-    "    random_game_query = (\"SELECT * from games \"\n",
-    "                        \"ORDER BY RAND() \"\n",
-    "                        \"LIMIT 1;\")\n",
+    "        \n",
+    "    random_game_query = (\"SELECT * \"\n",
+    "                          \"FROM games JOIN \"\n",
+    "                              \"(SELECT CEIL(RAND() * \"\n",
+    "                                  \"(SELECT MAX(id) \"\n",
+    "                                      \"FROM games)) AS id\"\n",
+    "                                  \") AS r2 \"\n",
+    "                                  \"USING (id);\")\n",
     "    \n",
-    "    cursor.execute(random_game_query)\n",
+    "    cursor.execute(random_game_query)    \n",
     "    \n",
-    "    game_code, board_size, board_objects, research, conference, starting_information = cursor[0]\n",
+    "    gid, game_code, board_size, board_objects, research, conference, starting_information = cursor.fetchone()\n",
     "    game = Game(Board.parse(board_objects), Research.parse(research), \n",
     "                Conference.parse(conference), StartingInformation.parse(starting_information))\n",
     "    \n",
@@ -165,6 +169,61 @@
     " \n",
     "    return game_code, game"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "clean-basic",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('A5Z2A4', <game.Game at 0x7f94108e9d10>)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pick_game()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "three-printer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_game(game_code):\n",
+    "    cxn = get_connection()\n",
+    "    cursor = cxn.cursor()\n",
+    "    \n",
+    "    game_query = (\"SELECT * from games \" \n",
+    "                 \"WHERE game_code = %s\")\n",
+    "    \n",
+    "    cursor.execute(game_query, (game_code))\n",
+    "    \n",
+    "    game_code, board_size, board_objects, research, conference, starting_information = cursor[0]\n",
+    "    game = Game(Board.parse(board_objects), Research.parse(research), \n",
+    "                Conference.parse(conference), StartingInformation.parse(starting_information))\n",
+    "    \n",
+    "    cursor.close()\n",
+    "    cxn.close()\n",
+    " \n",
+    "    return game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "toxic-junction",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
