--- a/Research Generation.ipynb
+++ b/Research Generation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "proud-depression",
+   "id": "stylish-judges",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "purple-helicopter",
+   "id": "sealed-humidity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "usual-newfoundland",
+   "id": "vocal-somewhere",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "configured-celebrity",
+   "id": "outer-production",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "rotary-librarian",
+   "id": "billion-nebraska",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "norman-fantasy",
+   "execution_count": 24,
+   "id": "american-information",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,13 +121,21 @@
     "        elif s == \"A\":\n",
     "            return RuleQualifier.AT_LEAST_ONE\n",
     "        elif s == \"E\":\n",
-    "            return RuleQualifier.EVERY"
+    "            return RuleQualifier.EVERY\n",
+    "    \n",
+    "    def to_json(self):\n",
+    "        if self is RuleQualifier.NONE:\n",
+    "            return \"NONE\"\n",
+    "        elif self is RuleQualifier.AT_LEAST_ONE:\n",
+    "            return \"AT_LEAST_ONE\"\n",
+    "        elif self is RuleQualifier.EVERY:\n",
+    "            return \"EVERY\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "nutritional-amount",
+   "execution_count": 25,
+   "id": "going-generic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,13 +206,22 @@
     "    def parse(cls, s):\n",
     "        space_object = SpaceObject.parse(s[1])\n",
     "        band_size = int(s[2])\n",
-    "        return cls(space_object, band_size)"
+    "        return cls(space_object, band_size)\n",
+    "    \n",
+    "    def to_json(self, board):\n",
+    "        return {\n",
+    "            \"ruleType\": \"BAND\",\n",
+    "            \"spaceObject\": self.space_object.to_json(),\n",
+    "            \"numSectors\": self.band_size,\n",
+    "            \"qualifier\": self.qualifier.to_json(),\n",
+    "            \"text\": self.text(board)\n",
+    "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "external-intensity",
+   "execution_count": 26,
+   "id": "fluid-conclusion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,13 +334,22 @@
     "        space_object1 = SpaceObject.parse(s[1])\n",
     "        space_object2 = SpaceObject.parse(s[2])\n",
     "        qualifier = RuleQualifier.parse(s[3])\n",
-    "        return cls(space_object1, space_object2, qualifier)"
+    "        return cls(space_object1, space_object2, qualifier)\n",
+    "    \n",
+    "    def to_json(self, board):\n",
+    "        return {\n",
+    "            \"ruleType\": \"OPPOSITE\",\n",
+    "            \"spaceObject1\": self.space_object1.to_json(),\n",
+    "            \"spaceObject2\": self.space_object2.to_json(),\n",
+    "            \"qualifier\": self.qualifier.to_json(),\n",
+    "            \"text\": self.text(board)\n",
+    "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "differential-serve",
+   "execution_count": 27,
+   "id": "optical-bobby",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,13 +420,21 @@
     "    def parse(cls, s):\n",
     "        space_object = SpaceObject.parse(s[1])\n",
     "        qualifier = RuleQualifier.parse(s[2])\n",
-    "        return cls(space_object, qualifier)"
+    "        return cls(space_object, qualifier)\n",
+    "    \n",
+    "    def to_json(self, board):\n",
+    "        return {\n",
+    "            \"ruleType\": \"OPPOSITE_SELF\",\n",
+    "            \"spaceObject\": self.space_object.to_json(),\n",
+    "            \"qualifier\": self.qualifier.to_json(),\n",
+    "            \"text\": self.text(board)\n",
+    "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "standard-vintage",
+   "execution_count": 29,
+   "id": "rough-attention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,13 +550,22 @@
     "        space_object1 = SpaceObject.parse(s[1])\n",
     "        space_object2 = SpaceObject.parse(s[2])\n",
     "        qualifier = RuleQualifier.parse(s[3])\n",
-    "        return cls(space_object1, space_object2, qualifier)"
+    "        return cls(space_object1, space_object2, qualifier)\n",
+    "    \n",
+    "    def to_json(self, board):\n",
+    "        return {\n",
+    "            \"ruleType\": \"ADJACENT\",\n",
+    "            \"spaceObject1\": self.space_object1.to_json(),\n",
+    "            \"spaceObject2\": self.space_object2.to_json(),\n",
+    "            \"qualifier\": self.qualifier.to_json(),\n",
+    "            \"text\": self.text(board)\n",
+    "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "little-athletics",
+   "execution_count": 30,
+   "id": "accompanied-protocol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,13 +631,21 @@
     "    def parse(cls, s):\n",
     "        space_object = SpaceObject.parse(s[1])\n",
     "        qualifier = RuleQualifier.parse(s[2])\n",
-    "        return cls(space_object, qualifier)"
+    "        return cls(space_object, qualifier)\n",
+    "    \n",
+    "    def to_json(self, board):\n",
+    "        return {\n",
+    "            \"ruleType\": \"ADJACENT_SELF\",\n",
+    "            \"spaceObject\": self.space_object.to_json(),\n",
+    "            \"qualifier\": self.qualifier.to_json(),\n",
+    "            \"text\": self.text(board)\n",
+    "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "quantitative-lighter",
+   "execution_count": 31,
+   "id": "civilian-heater",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,13 +802,23 @@
     "        space_object2 = SpaceObject.parse(s[2])\n",
     "        qualifier = RuleQualifier.parse(s[3])\n",
     "        num_sectors = int(s[4])\n",
-    "        return cls(space_object1, space_object2, qualifier, num_sectors)"
+    "        return cls(space_object1, space_object2, qualifier, num_sectors)\n",
+    "    \n",
+    "    def to_json(self, board):\n",
+    "        return {\n",
+    "            \"ruleType\": \"WITHIN\",\n",
+    "            \"spaceObject1\": self.space_object1.to_json(),\n",
+    "            \"spaceObject2\": self.space_object2.to_json(),\n",
+    "            \"numSectors\": self.num_sectors,\n",
+    "            \"qualifier\": self.qualifier.to_json(),\n",
+    "            \"text\": self.text(board)\n",
+    "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "inside-commons",
+   "execution_count": 32,
+   "id": "republican-glucose",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,8 +833,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "sapphire-stanley",
+   "execution_count": 35,
+   "id": "accepting-stranger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,13 +842,37 @@
     "    WINTER = 0\n",
     "    SPRING = 1\n",
     "    SUMMER = 2\n",
-    "    FALL = 3"
+    "    FALL = 3\n",
+    "    \n",
+    "    def to_json(self):\n",
+    "        return self.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "cubic-lawyer",
+   "execution_count": 34,
+   "id": "spectacular-valve",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'WINTER'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Equinox.WINTER.to_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "greenhouse-caution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,13 +902,20 @@
     "    \n",
     "    def __str__(self):\n",
     "        return \"Sector \" + str(self.sector_num+1) + \" does not contain \" + self.eliminated_obj.one() + \\\n",
-    "                \" \" + self.eliminated_obj.name() + \".\""
+    "                \" \" + self.eliminated_obj.name() + \".\"\n",
+    "    \n",
+    "    def to_json(self):\n",
+    "        return {\n",
+    "            \"sector\": self.sector_num,\n",
+    "            \"eliminatedObject\": self.eliminated_obj.to_json(),\n",
+    "            \"text\": str(self)\n",
+    "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "environmental-oriental",
+   "execution_count": 37,
+   "id": "favorite-backup",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,13 +995,21 @@
     "            for i in range(0, len(clue_str), 2):\n",
     "                equinox_clues.append(EliminationClue.parse(clue_str[i:i+2]))\n",
     "            clues[equinox] = equinox_clues\n",
-    "        return cls(clues)"
+    "        return cls(clues)\n",
+    "    \n",
+    "    def to_json(self):\n",
+    "        return {\n",
+    "            equinox.to_json(): [\n",
+    "                clue.to_json() for clue in self.clues[equinox]\n",
+    "            ]\n",
+    "            for equinox in self.clues\n",
+    "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "proprietary-inflation",
+   "execution_count": 38,
+   "id": "union-rouge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,13 +1101,16 @@
     "    def parse(cls, s):\n",
     "        rule_strs = s.split(\"|\")\n",
     "        rules = [Rule.parse(rule_str) for rule_str in rule_strs]\n",
-    "        return cls(rules)"
+    "        return cls(rules)\n",
+    "    \n",
+    "    def to_json(self, board):\n",
+    "        return [rule.to_json(board) for rule in self.rules]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "mounted-physiology",
+   "execution_count": 41,
+   "id": "numerical-details",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,13 +1201,16 @@
     "    def parse(cls, s):\n",
     "        rule_strs = s.split(\"|\")\n",
     "        rules = [Rule.parse(rule_str) for rule_str in rule_strs]\n",
-    "        return cls(rules)"
+    "        return cls(rules)\n",
+    "    \n",
+    "    def to_json(self, board):\n",
+    "        return [rule.to_json(board) for rule in self.rules]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "likely-cargo",
+   "execution_count": 40,
+   "id": "split-channel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,13 +1258,21 @@
     "        research = Research.parse(components[2])\n",
     "        conference = Conference.parse(components[3])\n",
     "        starting_info = StartingInformation.parse(components[4])\n",
-    "        return cls(board, starting_info, research, conference)"
+    "        return cls(board, starting_info, research, conference)\n",
+    "    \n",
+    "    def to_json(self):\n",
+    "        return {\n",
+    "            \"board\": self.board.to_json(),\n",
+    "            \"research\": self.research.to_json(self.board),\n",
+    "            \"conference\": self.conference.to_json(self.board),\n",
+    "            \"startingInformation\": self.starting_info.to_json()\n",
+    "        }"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "collectible-disabled",
+   "id": "bright-treaty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "wrapped-finder",
+   "id": "sunset-remains",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "brave-amateur",
+   "id": "compressed-macintosh",
    "metadata": {
     "scrolled": false
    },
@@ -1492,7 +1606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pleasant-winter",
+   "id": "worldwide-manor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1502,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hundred-package",
+   "id": "sharp-final",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1525,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "increasing-diploma",
+   "id": "desirable-consumer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,7 +1653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "random-working",
+   "id": "marked-bradford",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1549,7 +1663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "meaningful-engineer",
+   "id": "tropical-gates",
    "metadata": {},
    "outputs": [],
    "source": []
